<resources>
    <string name="app_name">Dominik.Kesselring</string>
    <string name="logout_button">Wyloguj</string>
    <string name="descImageView">Working</string>
    <string name="log_in_mail">mail@domain.com</string>
    <string name="log_in_password">password</string>
    <string name="log_in_button">Zaloguj się</string>
    <string name="text_view_user">Mail:</string>
    <string name="text_view_password">Hasło:</string>
    <string name="miniImage">mini Image</string>
    <string name="error_mail_format">Błędny format Mail!</string>
    <string name="error_password_format">Błędny format Hasło!</string>
    <string name="error_get_data">Problem z pobraniem danych</string>
    <string name="connect_to_internet">Enable your network now?</string>
    <string name="connect_to_internet_alert_title">No network connection!</string>
</resources>
